--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kit séruns</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="cabeçalho">
         <h1>Necture</h1>
         <h2>Conheçam o mais novo lançamento da Necture. O kit de séruns em parceria com Mari Maria Makeup</h2>
-        <img></img>
-        <img></img/>
-        <img></img>
+        <img src="1663819399178.jpg">
+    
 
-        <a href="https://www."><button>nome no botao</button></a>
+        <a href="https://www.marimariamakeup.com/"><button>conheça nossa patrocinadora</button></a>
     </header>
 </body>
 </html>
