--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
                 <li><a href="#">Produtos</a></li>
             </ul>
         </nav>
-        <img src="1663819399178.jpg">
-        
+        <img src="gettyimages-1223714147 (1).webp">
+        <img src="1663819399178.jpg"width="2000px"  height="700px">
 
-        
     </header>
         <a href="https://www.marimariamakeup.com/"><button>conheça nossa patrocinadora</button></a>
 </body>
